--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="infoCard">
                         <span id="errorForm" class="hidden">Incomplete form</span>
                         <label class="labelForm" for="name">CARDHOLDER NAME</label>
-                        <input type="text" id="name" placeholder="name Card" required="required" autocomplete="off">
+                        <input type="text" id="name" placeholder="Name User" required="required" autocomplete="off">
                         <label class="labelForm" for="number">CARD NUMBER</label>
                         <input  type="tel" id="number"  placeholder="0000 0000 0000 0000" required="required" maxlength="19" oninput="formatCreditCardNumber(this)" onchange="checkInput(this)">
                         <span id="numberError" class="hidden">Wrong Format</span>    
