--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
                             <div class="monthAndYear">  
                                 <class class="divMonth">
-                                    <input type="tel" name="month" id="month" placeholder="MM" required="required" maxlength="2" onchange="checkInput(this)">
+                                    <input type="tel" name="month" id="month" placeholder="MM" translate="no" required="required" maxlength="2" onchange="checkInput(this)">
                                     <span id="errorMonth"  class="hidden">Wrong Format</span>
                                 </class>
                                 <div class="divYear">
